--- a/index.html
+++ b/index.html
@@ -47,45 +47,49 @@
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="header__middle">
-                <a href="index.html" class="header__logo">
-                    <svg width="100%" height="100%" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M33.9314 29.5863C33.4202 30.7884 32.7886 31.9348 32.0464 33.0075C31.055 34.436 30.2409 35.4231 29.6169 35.9725C28.6476 36.8702 27.6064 37.3321 26.4931 37.3582C25.6956 37.3582 24.7319 37.1291 23.6094 36.6635C22.4833 36.1997 21.4494 35.9725 20.5023 35.9725C19.5109 35.9725 18.4475 36.1997 17.3084 36.6635C16.1712 37.1291 15.2518 37.3731 14.5484 37.3954C13.4832 37.442 12.4179 36.9689 11.3564 35.9725C10.6788 35.3765 9.83143 34.3522 8.81419 32.9032C7.72495 31.3593 6.82956 29.562 6.12801 27.519C5.37662 25.3083 5 23.1702 5 21.0992C5 18.7283 5.5077 16.6815 6.52494 14.9681C7.29433 13.6224 8.39428 12.4993 9.71882 11.707C11.0249 10.9167 12.5159 10.4911 14.0389 10.474C14.8881 10.474 16.0013 10.7385 17.3804 11.26C18.7595 11.7815 19.6457 12.0459 20.0315 12.0459C20.3232 12.0459 21.3036 11.7349 22.9725 11.1184C24.5473 10.5467 25.8765 10.3101 26.9658 10.4033C29.9196 10.6435 32.1369 11.8168 33.612 13.9326C30.972 15.5473 29.6667 17.8064 29.6926 20.7062C29.7147 22.9653 30.5289 24.8445 32.124 26.3363C32.8292 27.0171 33.652 27.5618 34.5517 27.9436C34.356 28.5154 34.1492 29.061 33.9314 29.5863ZM27.1615 2.70958C27.1615 4.47889 26.519 6.13272 25.2433 7.66177C23.6999 9.4795 21.8353 10.5318 19.8137 10.366C19.7873 10.1435 19.7743 9.91962 19.7749 9.69554C19.7749 7.99515 20.506 6.17742 21.8113 4.68934C22.4611 3.93692 23.2882 3.30929 24.2907 2.81016C25.2913 2.31847 26.2365 2.04656 27.1264 2C27.1504 2.23839 27.1615 2.47492 27.1615 2.70958Z"
-                            fill="#0071E4" />
-                    </svg>
-                </a>
-                <nav>
-                    <button class="header__middle-catalog">Весь каталог</button>
-                    <button class="header__middle-sale">Акции</button>
-                    <ul class="header__middle-list">
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                        <li class="header__middle-item">
-                            <a href="#" class="header__middle-link">Гарантия</a>
-                        </li>
-                    </ul>
-                    <div class="header__middle-contact">
-                        <span class="phone__num">+7 812 561 96 62</span>
-                        <span class="phone__num-call">Вам перезвонить?</span>
-                    </div>
-                </nav>
+        <div class="header__middle">
+            <div class="container">
+                <div class="header__block">
+                    <a class="header__logo" href="index.html">
+                        <svg width="100%" height="100%" viewBox="0 0 32 32" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M27.1451 23.669C26.7361 24.6308 26.2309 25.5479 25.6371 26.406C24.844 27.5488 24.1927 28.3385 23.6935 28.778C22.9181 29.4962 22.0851 29.8657 21.1945 29.8865C20.5565 29.8865 19.7855 29.7033 18.8875 29.3308C17.9866 28.9598 17.1595 28.778 16.4019 28.778C15.6087 28.778 14.758 28.9598 13.8467 29.3308C12.937 29.7033 12.2014 29.8984 11.6387 29.9163C10.7865 29.9536 9.93434 29.5751 9.0851 28.778C8.54306 28.3012 7.86515 27.4818 7.05135 26.3226C6.17996 25.0874 5.46365 23.6496 4.90241 22.0152C4.3013 20.2466 4 18.5362 4 16.8793C4 14.9827 4.40616 13.3452 5.21995 11.9745C5.83546 10.8979 6.71542 9.99945 7.77505 9.36558C8.81994 8.73335 10.0127 8.39293 11.2311 8.37924C11.9105 8.37924 12.8011 8.59081 13.9043 9.00799C15.0076 9.42518 15.7166 9.63675 16.0252 9.63675C16.2586 9.63675 17.0428 9.38793 18.378 8.89476C19.6378 8.43734 20.7012 8.24812 21.5726 8.32262C23.9357 8.51482 25.7095 9.45348 26.8896 11.1461C24.7776 12.4378 23.7334 14.2451 23.7541 16.565C23.7718 18.3723 24.4231 19.8756 25.6992 21.0691C26.2633 21.6137 26.9216 22.0495 27.6414 22.3549C27.4848 22.8123 27.3194 23.2488 27.1451 23.669ZM21.7292 2.16767C21.7292 3.58312 21.2152 4.90618 20.1946 6.12943C18.9599 7.58361 17.4682 8.42543 15.851 8.29282C15.8298 8.11483 15.8194 7.9357 15.8199 7.75644C15.8199 6.39613 16.4048 4.94194 17.449 3.75148C17.9689 3.14954 18.6306 2.64743 19.4325 2.24813C20.233 1.85479 20.9892 1.63725 21.7011 1.60001C21.7203 1.79072 21.7292 1.97994 21.7292 2.16767Z"
+                                fill="#0071E4" />
+                        </svg>
+                    </a>
+                    <nav class="header__nav">
+                        <div class="search__input">
+                            <span class="search__icon">
+                                <svg width="21" height="21" viewBox="0 0 21 21" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M20 20L15.514 15.506M18 9.5C18 11.7543 17.1045 13.9163 15.5104 15.5104C13.9163 17.1045 11.7543 18 9.5 18C7.24566 18 5.08365 17.1045 3.48959 15.5104C1.89553 13.9163 1 11.7543 1 9.5C1 7.24566 1.89553 5.08365 3.48959 3.48959C5.08365 1.89553 7.24566 1 9.5 1C11.7543 1 13.9163 1.89553 15.5104 3.48959C17.1045 5.08365 18 7.24566 18 9.5V9.5Z"
+                                        stroke="#100E0E" stroke-width="2" stroke-linecap="round" />
+                                </svg>
+                            </span>
+                            <input class="nav__search" type="search">
+                        </div>
+                        <a class="nav__phone" href="tel:+78125619662">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M10.1339 10.536L11.7449 9.06C12.1854 8.65563 12.495 8.12885 12.634 7.54727C12.773 6.96569 12.735 6.35584 12.5249 5.796L11.8379 3.9615C11.5813 3.27663 11.0731 2.71538 10.4171 2.39208C9.76103 2.06879 9.0064 2.00779 8.30693 2.2215C5.73293 3.009 3.75443 5.4015 4.36343 8.2425C4.76393 10.1115 5.53043 12.4575 6.98243 14.9535C8.43743 17.4555 10.0994 19.3035 11.5244 20.6025C13.6754 22.56 16.7504 22.071 18.7289 20.226C19.2593 19.7315 19.5811 19.0534 19.6288 18.3298C19.6764 17.6063 19.4463 16.8918 18.9854 16.332L17.7254 14.802C17.3454 14.3393 16.8356 14.0009 16.2617 13.8304C15.6878 13.6598 15.0759 13.6649 14.5049 13.845L12.4229 14.5005C11.8853 13.9456 11.4141 13.33 11.0189 12.666C10.6375 11.9945 10.3403 11.2786 10.1339 10.5345V10.536Z"
+                                    fill="#100E0E" />
+                            </svg>
+                        </a>
+                        <button class="nav__menu">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M4 6H20V8H4V6ZM4 11H20V13H4V11ZM4 16H20V18H4V16Z" fill="#100E0E" />
+                            </svg>
+                        </button>
+                    </nav>
+                </div>
+
             </div>
         </div>
+
     </header>
 
 
