--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
         <div class="header__middle">
             <div class="container">
+
                 <div class="header__block">
                     <a class="header__logo" href="index.html">
                         <svg width="100%" height="100%" viewBox="0 0 32 32" fill="none"
@@ -58,6 +59,7 @@
                                 fill="#0071E4" />
                         </svg>
                     </a>
+                    <button class="nav__catalog">Каталог товаров</button>
                     <nav class="header__nav">
                         <div class="search__input">
                             <span class="search__icon">
@@ -65,25 +67,54 @@
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M20 20L15.514 15.506M18 9.5C18 11.7543 17.1045 13.9163 15.5104 15.5104C13.9163 17.1045 11.7543 18 9.5 18C7.24566 18 5.08365 17.1045 3.48959 15.5104C1.89553 13.9163 1 11.7543 1 9.5C1 7.24566 1.89553 5.08365 3.48959 3.48959C5.08365 1.89553 7.24566 1 9.5 1C11.7543 1 13.9163 1.89553 15.5104 3.48959C17.1045 5.08365 18 7.24566 18 9.5V9.5Z"
-                                        stroke="#100E0E" stroke-width="2" stroke-linecap="round" />
+                                        stroke="inherit" stroke-width="2" stroke-linecap="round" />
                                 </svg>
                             </span>
-                            <input class="nav__search" type="search">
+                            <input class="nav__search" type="search" placeholder="Поиск по каталогу товаров">
                         </div>
-                        <a class="nav__phone" href="tel:+78125619662">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M10.1339 10.536L11.7449 9.06C12.1854 8.65563 12.495 8.12885 12.634 7.54727C12.773 6.96569 12.735 6.35584 12.5249 5.796L11.8379 3.9615C11.5813 3.27663 11.0731 2.71538 10.4171 2.39208C9.76103 2.06879 9.0064 2.00779 8.30693 2.2215C5.73293 3.009 3.75443 5.4015 4.36343 8.2425C4.76393 10.1115 5.53043 12.4575 6.98243 14.9535C8.43743 17.4555 10.0994 19.3035 11.5244 20.6025C13.6754 22.56 16.7504 22.071 18.7289 20.226C19.2593 19.7315 19.5811 19.0534 19.6288 18.3298C19.6764 17.6063 19.4463 16.8918 18.9854 16.332L17.7254 14.802C17.3454 14.3393 16.8356 14.0009 16.2617 13.8304C15.6878 13.6598 15.0759 13.6649 14.5049 13.845L12.4229 14.5005C11.8853 13.9456 11.4141 13.33 11.0189 12.666C10.6375 11.9945 10.3403 11.2786 10.1339 10.5345V10.536Z"
-                                    fill="#100E0E" />
-                            </svg>
-                        </a>
+                        <div class="nav__phone">
+                            <a class="nav__phone-mobil" href="tel:+78125619662">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="inherit"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M10.1339 10.536L11.7449 9.06C12.1854 8.65563 12.495 8.12885 12.634 7.54727C12.773 6.96569 12.735 6.35584 12.5249 5.796L11.8379 3.9615C11.5813 3.27663 11.0731 2.71538 10.4171 2.39208C9.76103 2.06879 9.0064 2.00779 8.30693 2.2215C5.73293 3.009 3.75443 5.4015 4.36343 8.2425C4.76393 10.1115 5.53043 12.4575 6.98243 14.9535C8.43743 17.4555 10.0994 19.3035 11.5244 20.6025C13.6754 22.56 16.7504 22.071 18.7289 20.226C19.2593 19.7315 19.5811 19.0534 19.6288 18.3298C19.6764 17.6063 19.4463 16.8918 18.9854 16.332L17.7254 14.802C17.3454 14.3393 16.8356 14.0009 16.2617 13.8304C15.6878 13.6598 15.0759 13.6649 14.5049 13.845L12.4229 14.5005C11.8853 13.9456 11.4141 13.33 11.0189 12.666C10.6375 11.9945 10.3403 11.2786 10.1339 10.5345V10.536Z"
+                                        fill="inherit" />
+                                </svg>
+                            </a>
+                            <a class="nav__phone-tablet" href="#">
+                                +7 812 561 96 62
+                            </a>
+
+                        </div>
                         <button class="nav__menu">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path d="M4 6H20V8H4V6ZM4 11H20V13H4V11ZM4 16H20V18H4V16Z" fill="#100E0E" />
                             </svg>
                         </button>
+                        <div class="header__actions">
+                            <a class="header__action-heart" href="#">
+                                <svg width="100%" height="100%" viewBox="0 0 40 40" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M12.5002 6.66667C7.43766 6.66667 3.3335 10.7708 3.3335 15.8333C3.3335 25 14.1668 33.3333 20.0002 35.2717C25.8335 33.3333 36.6668 25 36.6668 15.8333C36.6668 10.7708 32.5627 6.66667 27.5002 6.66667C24.4002 6.66667 21.6585 8.20583 20.0002 10.5617C19.1549 9.35767 18.032 8.37507 16.7264 7.69707C15.4209 7.01907 13.9712 6.66563 12.5002 6.66667Z"
+                                        stroke="#706E6E" stroke-width="4" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </a>
+                            <a class="header__action-filter" href="#">
+                                <svg width="100%" height="100%" viewBox="0 0 40 40" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M7.84675 25.7333C9.79803 27.1039 12.1239 27.8406 14.5084 27.8433C15.2432 29.8442 16.5121 31.6056 18.1773 32.9361C19.8426 34.2667 21.8405 35.1156 23.9542 35.3907C26.0679 35.6658 28.2166 35.3566 30.167 34.4966C32.1173 33.6366 33.7948 32.2588 35.0173 30.5126C36.2397 28.7665 36.9605 26.7188 37.1012 24.5919C37.2419 22.465 36.7973 20.3403 35.8156 18.4483C34.8338 16.5563 33.3525 14.9694 31.5325 13.8599C29.7125 12.7504 27.6233 12.1608 25.4917 12.155C24.8604 10.4364 23.8334 8.89048 22.4938 7.64235C21.1542 6.39422 19.5397 5.47889 17.7808 4.9704C16.0219 4.46191 14.168 4.37453 12.3691 4.71533C10.5702 5.05614 8.87669 5.81556 7.42567 6.93216C5.97464 8.04877 4.80679 9.49122 4.01657 11.1428C3.22635 12.7945 2.83595 14.6089 2.87695 16.4393C2.91794 18.2698 3.38919 20.0649 4.25256 21.6795C5.11593 23.2941 6.34719 24.6828 7.84675 25.7333ZM9.75842 23C10.9556 23.8412 12.354 24.3506 13.8117 24.4767C13.6614 21.8618 14.399 19.2729 15.9051 17.13C17.404 14.9823 19.5848 13.4042 22.0934 12.6517C21.5528 11.4938 20.753 10.4757 19.7561 9.67623C18.7592 8.87675 17.5917 8.31727 16.344 8.04103C15.0963 7.76479 13.8018 7.7792 12.5606 8.08315C11.3193 8.38709 10.1646 8.97243 9.18575 9.79391C8.20685 10.6154 7.43 11.651 6.91526 12.8206C6.40051 13.9903 6.16166 15.2627 6.21718 16.5394C6.2727 17.8161 6.62109 19.0629 7.23543 20.1835C7.84976 21.304 8.71358 22.2683 9.76008 23.0017L9.75842 23ZM30.2417 16.995C29.0443 16.1545 27.646 15.6456 26.1884 15.52C26.3388 18.1349 25.6011 20.7238 24.0951 22.8667C22.5961 25.0144 20.4154 26.5925 17.9067 27.345C18.4474 28.5029 19.2471 29.521 20.2441 30.3204C21.241 31.1199 22.4084 31.6794 23.6561 31.9556C24.9038 32.2319 26.1983 32.2175 27.4396 31.9135C28.6808 31.6096 29.8355 31.0242 30.8144 30.2028C31.7933 29.3813 32.5702 28.3457 33.0849 27.176C33.5997 26.0064 33.8385 24.734 33.783 23.4573C33.7275 22.1806 33.3791 20.9338 32.7647 19.8132C32.1504 18.6927 31.2866 17.7284 30.2401 16.995H30.2417Z"
+                                        fill="#706E6E" />
+                                </svg>
+                            </a>
+                            <div class="header__action-basket">
+                                в корзине
+                                <span class="basket-count">1</span>
+                            </div>
+                        </div>
                     </nav>
                 </div>
 
