preferences section full complated

--- a/index.html
+++ b/index.html
@@ -1828,6 +1828,123 @@
                 </div>
             </div>
         </section>
+        <section class="preferences">
+            <div class="container">
+                <div class="preferences__block">
+                    <h2 class="preferences__title">Наши преимущества</h2>
+                    <div class="preferences__cards">
+                        <!-- item 1 -->
+                        <div class="preferences__card">
+                            <div class="preferences__card-img">
+                                <picture class="tabled__img">
+                                    <source media="(min-width:992px)" srcset="./imgs/gifts-desktop.png">
+                                    <img src="./imgs/gifts-tablet.png" alt="Gifts and price" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="preferences__card-content promotions">
+                                <span class="promotions__title">
+                                    <img src="./imgs/gifts-icon.png" alt="Promotions and gifts imagine" loading="lazy">
+                                    <span>Акции и подарки</span>
+                                </span>
+                                <p class="promotions__description">Постоянные акции, бонусы и скидки. Покупайте технику
+                                    Apple по самым выгодным ценам
+                                </p>
+                            </div>
+                            <div class="preferences__card-action">
+                                <a class="apply" href="#">подробнее</a>
+                            </div>
+                        </div>
+                        <!-- item  -->
+                        <div class="preferences__card">
+                            <div class="preferences__card-img">
+                                <picture class="tabled__img">
+                                    <source media="(min-width:992px)" srcset="./imgs/delivery-desktop.png">
+                                    <img src="./imgs/delivery-tablet.png" alt="Gifts and price" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="preferences__card-content promotions">
+                                <span class="promotions__title">
+                                    <img src="./imgs/delivery-icon.png" alt="Delivery your home 3 o'clock"
+                                        loading="lazy">
+                                    <span>Доставим за 3 часа</span>
+                                </span>
+                                <p class="promotions__description">Быстрая и бесплатная доставка по Москве. Доставим за
+                                    3 часа в
+                                </p>
+                            </div>
+                            <div class="preferences__card-action">
+                                <a class="apply" href="#">подробнее</a>
+                            </div>
+                        </div>
+                        <!-- item  -->
+                        <div class="preferences__card">
+                            <div class="preferences__card-img">
+                                <picture class="tabled__img">
+                                    <source media="(min-width:992px)" srcset="./imgs/pay-desktop.png">
+                                    <img src="./imgs/pay-tablet.png" alt="Gifts and price" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="preferences__card-content promotions">
+                                <span class="promotions__title">
+                                    <img src="./imgs/pay-icon.png" alt="Delivery your home 3 o'clock" loading="lazy">
+                                    <span>Удобные способы оплаты</span>
+                                </span>
+                                <p class="promotions__description">Наличными или картой при получении, оплата на сайте
+                                    или в кредит
+                                </p>
+                            </div>
+                            <div class="preferences__card-action">
+                                <a class="apply" href="#">подробнее</a>
+                            </div>
+                        </div>
+                        <!-- item  -->
+                        <div class="preferences__card">
+                            <div class="preferences__card-img">
+                                <picture class="tabled__img">
+                                    <source media="(min-width:992px)" srcset="./imgs/bank-desktop.png">
+                                    <img src="./imgs/bank-icon.png" alt="Gifts and price" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="preferences__card-content promotions">
+                                <span class="promotions__title">
+                                    <img src="./imgs/bank-mobile-icon.svg.png" alt="Delivery your home 3 o'clock"
+                                        loading="lazy">
+                                    <span>Покупка в кредит</span>
+                                </span>
+                                <p class="promotions__description">Получите самое выгодное кредитное предложение от
+                                    более чем 30 ведущих банков страны
+                                </p>
+                            </div>
+                            <div class="preferences__card-action">
+                                <a class="apply" href="#">подробнее</a>
+                            </div>
+                        </div>
+                        <!-- item  -->
+                        <div class="preferences__card none-card">
+                            <div class="preferences__card-img">
+                                <picture class="tabled__img">
+                                    <source media="(min-width:992px)" srcset="./imgs/cheked-desktop.png">
+                                    <img src="./imgs/cheked-icon.png" alt="Gifts and price" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="preferences__card-content promotions">
+                                <span class="promotions__title text-center">
+
+                                    <span>Гарантия</span>
+                                </span>
+                                <p class="promotions__description">Все товары, представленные в нашем сайте, имеют
+                                    гарантию
+                                    от нашего магазина или компании Apple
+                                </p>
+                            </div>
+                            <div class="preferences__card-action">
+                                <a class="apply" href="#">подробнее</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
