subscribe section full complated

--- a/index.html
+++ b/index.html
@@ -1945,6 +1945,34 @@
                 </div>
             </div>
         </section>
+        <section class="subscribe">
+            <div class="container">
+                <div class="subscribe__block">
+                    <div class="subscribe__img">
+                        <picture>
+                            <source media="(min-width:992px)" srcset="./imgs/subscribe-desktop.png">
+                            <img src="./imgs/subscribe-img.png" alt="subscribe this link imagine" loading="lazy">
+                        </picture>
+                    </div>
+
+                    <div class="subscribe__content">
+                        <span class="subscribe__title">Подписка на рассылку акций!</span>
+                        <p class="subscribe__description">Подпишитесь на рассылку, чтобы узнавать о всех акциях первым
+                        </p>
+                        <div class="subscribe__actions">
+                            <span class="btn__for-ad">
+                                <span>Скидка 10%</span>
+                                на первую покупку за подписку</span>
+                            <form class="subscribe__form">
+                                <input class="subscribe__input" type="number" placeholder="+ 7">
+                                <button class="subscribe__btn" type="submit">подписаться</button>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
