--- a/index.html
+++ b/index.html
@@ -14,6 +14,60 @@
 </head>
 
 <body>
+    <section class="stiky__nav">
+        <div class="container">
+            <div class="stiky__nav-block">
+                <ul class="stiky__nav-list">
+                    <li class="stiky__nav-link">
+                        <a href="#">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M2.3999 9.59961C2.3999 9.28135 2.52633 8.97612 2.75137 8.75108C2.97642 8.52604 3.28164 8.39961 3.5999 8.39961H15.9695C16.2878 8.39961 16.593 8.52604 16.818 8.75108C17.0431 8.97612 17.1695 9.28135 17.1695 9.59961C17.1695 9.91787 17.0431 10.2231 16.818 10.4481C16.593 10.6732 16.2878 10.7996 15.9695 10.7996H3.5999C3.28164 10.7996 2.97642 10.6732 2.75137 10.4481C2.52633 10.2231 2.3999 9.91787 2.3999 9.59961ZM2.3999 4.79961C2.3999 4.48135 2.52633 4.17612 2.75137 3.95108C2.97642 3.72604 3.28164 3.59961 3.5999 3.59961H20.3999C20.7182 3.59961 21.0234 3.72604 21.2484 3.95108C21.4735 4.17612 21.5999 4.48135 21.5999 4.79961C21.5999 5.11787 21.4735 5.42309 21.2484 5.64814C21.0234 5.87318 20.7182 5.99961 20.3999 5.99961H3.5999C3.28164 5.99961 2.97642 5.87318 2.75137 5.64814C2.52633 5.42309 2.3999 5.11787 2.3999 4.79961ZM2.3999 14.3996C2.3999 14.0813 2.52633 13.7761 2.75137 13.5511C2.97642 13.326 3.28164 13.1996 3.5999 13.1996H20.3999C20.7182 13.1996 21.0234 13.326 21.2484 13.5511C21.4735 13.7761 21.5999 14.0813 21.5999 14.3996C21.5999 14.7179 21.4735 15.0231 21.2484 15.2481C21.0234 15.4732 20.7182 15.5996 20.3999 15.5996H3.5999C3.28164 15.5996 2.97642 15.4732 2.75137 15.2481C2.52633 15.0231 2.3999 14.7179 2.3999 14.3996ZM2.3999 19.1996C2.3999 18.8813 2.52633 18.5761 2.75137 18.3511C2.97642 18.126 3.28164 17.9996 3.5999 17.9996H15.9695C16.2878 17.9996 16.593 18.126 16.818 18.3511C17.0431 18.5761 17.1695 18.8813 17.1695 19.1996C17.1695 19.5179 17.0431 19.8231 16.818 20.0481C16.593 20.2732 16.2878 20.3996 15.9695 20.3996H3.5999C3.28164 20.3996 2.97642 20.2732 2.75137 20.0481C2.52633 19.8231 2.3999 19.5179 2.3999 19.1996Z"
+                                    fill="#52D116" />
+                            </svg>
+                            <span>каталог</span>
+                        </a>
+                    </li>
+                    <li class="stiky__nav-link">
+                        <a href="#">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M6.5 2H17.5C17.6552 2 17.8084 2.03614 17.9472 2.10557C18.0861 2.175 18.2069 2.2758 18.3 2.4L21 6V21C21 21.2652 20.8946 21.5196 20.7071 21.7071C20.5196 21.8946 20.2652 22 20 22H4C3.73478 22 3.48043 21.8946 3.29289 21.7071C3.10536 21.5196 3 21.2652 3 21V6L5.7 2.4C5.79315 2.2758 5.91393 2.175 6.05279 2.10557C6.19164 2.03614 6.34475 2 6.5 2ZM18.5 6L17 4H7L5.5 6H18.5ZM9 10H7V12C7 13.3261 7.52678 14.5979 8.46447 15.5355C9.40215 16.4732 10.6739 17 12 17C13.3261 17 14.5979 16.4732 15.5355 15.5355C16.4732 14.5979 17 13.3261 17 12V10H15V12C15 12.7956 14.6839 13.5587 14.1213 14.1213C13.5587 14.6839 12.7956 15 12 15C11.2044 15 10.4413 14.6839 9.87868 14.1213C9.31607 13.5587 9 12.7956 9 12V10Z"
+                                    fill="#0071E4" />
+                            </svg>
+                            <span>корзина</span>
+                        </a>
+                    </li>
+                    <li class="stiky__nav-link">
+                        <a href="#">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7.5 4C4.4625 4 2 6.4625 2 9.5C2 15 8.5 20 12 21.163C15.5 20 22 15 22 9.5C22 6.4625 19.5375 4 16.5 4C14.64 4 12.995 4.9235 12 6.337C11.4928 5.6146 10.8191 5.02505 10.0358 4.61824C9.25245 4.21144 8.38265 3.99938 7.5 4Z"
+                                    stroke="#706E6E" stroke-width="2.4" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                            <span>избранное</span>
+                        </a>
+                    </li>
+                    <li class="stiky__nav-link">
+                        <a href="#">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.708 15.4402C5.87877 16.2625 7.27429 16.7045 8.705 16.7062C9.14587 17.9067 9.90721 18.9635 10.9064 19.7618C11.9055 20.5602 13.1043 21.0695 14.3725 21.2346C15.6407 21.3997 16.9299 21.2141 18.1001 20.6981C19.2703 20.1821 20.2768 19.3554 21.0103 18.3077C21.7438 17.2601 22.1762 16.0315 22.2607 14.7553C22.3451 13.4792 22.0783 12.2043 21.4893 11.0691C20.9003 9.93392 20.0115 8.98179 18.9195 8.31611C17.8274 7.65043 16.5739 7.29665 15.295 7.29316C14.9162 6.26199 14.3 5.33446 13.4962 4.58558C12.6925 3.8367 11.7238 3.2875 10.6684 2.9824C9.61309 2.67731 8.50076 2.62488 7.4214 2.82937C6.34205 3.03385 5.32597 3.4895 4.45535 4.15946C3.58474 4.82943 2.88402 5.69489 2.40989 6.68587C1.93576 7.67684 1.70152 8.76549 1.72612 9.86377C1.75072 10.962 2.03346 12.0391 2.55148 13.0079C3.06951 13.9766 3.80826 14.8099 4.708 15.4402ZM5.855 13.8002C6.57332 14.3049 7.41237 14.6105 8.287 14.6862C8.19677 13.1173 8.63938 11.5639 9.543 10.2782C10.4424 8.98955 11.7508 8.04266 13.256 7.59116C12.9316 6.89642 12.4518 6.28559 11.8536 5.80591C11.2555 5.32622 10.555 4.99052 9.80637 4.82478C9.05775 4.65904 8.28104 4.66768 7.5363 4.85005C6.79156 5.03242 6.09873 5.38363 5.5114 5.87651C4.92406 6.3694 4.45795 6.99076 4.14911 7.69255C3.84026 8.39434 3.69695 9.15776 3.73026 9.92378C3.76357 10.6898 3.97261 11.4379 4.34121 12.1102C4.70981 12.7826 5.2281 13.3611 5.856 13.8012L5.855 13.8002ZM18.145 10.1972C17.4266 9.69287 16.5875 9.38754 15.713 9.31216C15.8032 10.8811 15.3606 12.4344 14.457 13.7202C13.5576 15.0088 12.2492 15.9557 10.744 16.4072C11.0684 17.1019 11.5482 17.7127 12.1464 18.1924C12.7445 18.6721 13.445 19.0078 14.1936 19.1735C14.9423 19.3393 15.719 19.3306 16.4637 19.1483C17.2084 18.9659 17.9013 18.6147 18.4886 18.1218C19.0759 17.6289 19.542 17.0076 19.8509 16.3058C20.1597 15.604 20.3031 14.8406 20.2697 14.0745C20.2364 13.3085 20.0274 12.5604 19.6588 11.8881C19.2902 11.2158 18.7719 10.6372 18.144 10.1972H18.145Z"
+                                    fill="#706E6E" />
+                            </svg>
+                            <span>сравнение</span>
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </section>
     <header class="header">
         <h1>Apple Mагазин - Ваш надежный источник продукции Apple!</h1>
         <div class="header__top">
@@ -267,7 +321,6 @@
             </div>
 
         </div>
-
     </header>
     <main>
         <section class="hero">
@@ -1963,8 +2016,8 @@
                             <span class="btn__for-ad">
                                 <span>Скидка 10%</span>
                                 на первую покупку за подписку</span>
-                            <form class="subscribe__form">
-                                <input class="subscribe__input" type="number" placeholder="+ 7">
+                            <form class="subscribe__form" action="https://echo.htmlacademy.ru" method="post">
+                                <input class="subscribe__input" name="user_phone" type="number" placeholder="+ 7">
                                 <button class="subscribe__btn" type="submit">подписаться</button>
                             </form>
 
@@ -1974,6 +2027,109 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__block">
+                <div class="footer__data">
+                    <div class="footer__top">
+                        <img src="./imgs/apple-icon.svg" alt="Apple store logo icon ">
+                        <div class="foore__top-text">
+                            <span>© 2013-2022</span>
+                            <span>Продажа iPhone в МСК</span>
+                        </div>
+                    </div>
+                    <p class="footer__top-description">*Сайт не является публичной оффертой. Вся информация, указанная
+                        на
+                        сайте носит информационный
+                        характер.</p>
+                </div>
+                <ul class="footer__menu-list">
+                    <li class="footer__menu0link">
+                        <a href="#">Гарантия</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Политика возврата</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Кредит</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Доставка и оплата</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Отзывы</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Контакты</a>
+                    </li>
+                    <li class="footer__menu0link">
+                        <a href="#">Политика конфеденциальности</a>
+                    </li>
+                </ul>
+                <ul class="footer__category-list">
+                    <li class="footer__category-link">
+                        <a href="#">iPhone</a>
+                    </li>
+                    <li class="footer__category-link">
+                        <a href="#">iPad</a>
+                    </li>
+                    <li class="footer__category-link">
+                        <a href="#">Macbook и iMac</a>
+                    </li>
+                    <li class="footer__category-link">
+                        <a href="#">Watch</a>
+                    </li>
+                    <li class="footer__category-link">
+                        <a href="#">Аксессуары</a>
+                    </li>
+                    <li class="footer__category-link">
+                        <a href="#">Акции</a>
+                    </li>
+                </ul>
+                <div class="footer__contact">
+                    <div class="footer__contact-wrap">
+                        <a class="footer__contact-phone" href="tel:+78127048697">+7 812 704 86 97</a>
+                        <a class="footer__contact-center" href="google.map.com">Бесплатная консультация
+                            С 10:00 до 21:00, без выходных</a>
+                        <a class="footer__contact-call" href="#">Заказать звонок</a>
+                    </div>
+                    <div class="header__top-social top footer__contact-icons">
+                        <a href="https://web.whatsapp.com/" target="_blank" class="top__link-watsapp">
+                            <svg aria-label="Watsapp messenger icon " role="img" width="100%" height="100%"
+                                viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M17.0358 14.331C16.7763 14.1976 15.4834 13.5643 15.2429 13.4786C15.0025 13.3881 14.8263 13.3452 14.6525 13.6119C14.4763 13.8762 13.9763 14.4643 13.8191 14.6429C13.6668 14.8191 13.512 14.8405 13.2525 14.7095C11.7096 13.9381 10.6977 13.3333 9.68104 11.5881C9.41199 11.1238 9.95008 11.1571 10.4525 10.1548C10.5382 9.97858 10.4953 9.82858 10.4287 9.69525C10.362 9.56191 9.83818 8.27143 9.61913 7.74524C9.40723 7.23334 9.18818 7.30477 9.02866 7.29524C8.87627 7.28572 8.70246 7.28572 8.52627 7.28572C8.35008 7.28572 8.06675 7.35239 7.82627 7.61191C7.5858 7.8762 6.90723 8.51191 6.90723 9.80239C6.90723 11.0929 7.8477 12.3429 7.97627 12.5191C8.10961 12.6952 9.82627 15.3429 12.462 16.4833C14.1287 17.2024 14.781 17.2643 15.6144 17.1405C16.1215 17.0643 17.1667 16.5071 17.3834 15.8905C17.6001 15.2762 17.6001 14.75 17.5358 14.6405C17.4715 14.5238 17.2953 14.4571 17.0358 14.331Z"
+                                    fill="white" />
+                                <path
+                                    d="M22.0767 8.10476C21.5386 6.82619 20.7672 5.67857 19.7838 4.69286C18.8005 3.70952 17.6529 2.93571 16.3719 2.4C15.0624 1.85 13.6719 1.57143 12.2386 1.57143H12.191C10.7481 1.57857 9.35048 1.86428 8.0362 2.42619C6.76715 2.96905 5.62906 3.74047 4.65525 4.72381C3.68144 5.70714 2.91715 6.85 2.38858 8.12381C1.84096 9.44286 1.56477 10.8452 1.57191 12.2881C1.57906 13.9405 1.97429 15.581 2.71477 17.0476V20.6667C2.71477 21.2714 3.20525 21.7619 3.81001 21.7619H7.43144C8.8981 22.5024 10.5386 22.8976 12.191 22.9048H12.241C13.6672 22.9048 15.0505 22.6286 16.3529 22.0881C17.6267 21.5571 18.7719 20.7952 19.7529 19.8214C20.7362 18.8476 21.51 17.7095 22.0505 16.4405C22.6124 15.1262 22.8981 13.7286 22.9052 12.2857C22.9124 10.8357 22.6314 9.42857 22.0767 8.10476ZM18.4791 18.5333C16.81 20.1857 14.5957 21.0952 12.2386 21.0952H12.1981C10.7624 21.0881 9.3362 20.731 8.07667 20.0595L7.87667 19.9524H4.52429V16.6L4.41715 16.4C3.74572 15.1405 3.38858 13.7143 3.38144 12.2786C3.37191 9.90476 4.27906 7.67619 5.94334 5.99762C7.60525 4.31905 9.82667 3.39047 12.2005 3.38095H12.241C13.4314 3.38095 14.5862 3.6119 15.6743 4.06905C16.7362 4.51428 17.6886 5.15476 18.5076 5.97381C19.3243 6.79047 19.9671 7.74524 20.4124 8.80714C20.8743 9.90714 21.1052 11.0738 21.1005 12.2786C21.0862 14.65 20.1552 16.8714 18.4791 18.5333Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a href="https://web.telegram.org/" target="_blank" class="top__link-tg">
+                            <svg aria-label="Telegram messenger icon " role="img" width="100%" height="100%"
+                                viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M1.73168 6.09323C5.73025 4.35152 8.39596 3.20316 9.72882 2.64838C13.5388 1.06416 14.3295 0.78902 14.846 0.779699C14.9595 0.777877 15.2124 0.805948 15.3774 0.939341C15.5145 1.05184 15.5531 1.20398 15.5724 1.31081C15.5895 1.41752 15.6131 1.66073 15.5938 1.85059C15.3881 4.01916 14.4945 9.28159 14.0402 11.7105C13.8495 12.7382 13.4702 13.0828 13.1038 13.1164C12.3067 13.1897 11.7024 12.5902 10.931 12.0847C9.72453 11.2933 9.04311 10.8009 7.87096 10.0288C6.51668 9.13652 7.39525 8.64602 8.16668 7.84459C8.36811 7.6348 11.8781 4.44302 11.9445 4.15352C11.9531 4.11731 11.9617 3.9823 11.8802 3.91116C11.801 3.8398 11.6831 3.86423 11.5974 3.88352C11.4752 3.91095 9.54882 5.18552 5.81168 7.70702C5.26525 8.08288 4.77025 8.26609 4.32453 8.25645C3.83596 8.24595 2.89311 7.97959 2.19239 7.75202C1.33525 7.47281 0.651677 7.32516 0.711677 6.85095C0.741677 6.60409 1.08239 6.35145 1.73168 6.09323Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a href="https://web.vk.me/" target="_blank">
+                            <img src="./imgs/icons/vk-icon.png" alt="Vk messenger img">
+                        </a>
+                    </div>
+                    <div class="footer__addresss">
+                        <a class="footer__address-link" href="#">Москва, ул Барклая 8</a>
+                        <a class="footer__address-link" href="#">Москва, ул Барклая 8</a>
+                    </div>
+                </div>
+                <div class="footer__address">
+                    <a class="footer__address-link" href="#">Москва, ул Барклая 8</a>
+                    <a class="footer__address-link" href="#">Москва, ул Барклая 8</a>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
